...
            try {
                block()
                currentCoroutineContext().ensureActive()
            } catch (canceled: CancellationException) {
                throw canceled
            } catch (error: Exception) {
                failed(error)
            } finally {
                if (!stopped && currentCoroutineContext().isActive)
                    mutable.value = state.value.copy(busy = false)
            }
        }
    }
...
